--- a/src/App.css
+++ b/src/App.css
@@ -39,6 +39,12 @@
 
 .card {
   margin: 10px;
+  /* background-color: #cae6d9; */
+  background: #cae6d9;
+}
+
+.card-body {
+  background-color: #fed766;
 }
 
 .nav-item {
@@ -67,8 +73,8 @@
 
 .feature {
   margin: 50px;
-  width: 80%;
-  height: 80%;
+  width: 100%;
+  height: 100%;
 }
 
 .feature2 {
@@ -79,17 +85,18 @@
 
 ul {
   list-style-type: square;
+  font-weight: bold;
 }
 
 img {
-  height: 75%;
-  width: 75%;
+  height: 50%;
+  width: 50%;
 }
 
-.img2 {
-  height: 100%;
-  width: 75%;
-}
+/* .img2 {
+  height: fit-content;
+  width: fit-content;
+} */
 
 /* .image {
   height: 100%;
@@ -97,11 +104,16 @@ img {
 } */
 
 .navbar {
-  background-color: #96ceb4;
-  border: #96ceb4;
+  background-color: #2ab7ca;
+  border: #2ab7ca;
   height: 60px;
   margin-bottom: 20px;
   font-weight: bold;
+}
+
+.navback {
+  /* background-color: #96ceb4; */
+  background-color: #2ab7ca;
 }
 
 .about {
