--- a/src/App.css
+++ b/src/App.css
@@ -79,10 +79,11 @@
   margin: 50px;
   width: 100%;
   height: 100%;
+  align-items: center;
 }
 
 .feature2 {
-  margin-top: 80px;
+  margin: 80px;
   width: 50%;
   height: 50%;
 }
@@ -144,8 +145,6 @@ img {
 }
 
 .quote {
-  width: 100%;
-  margin: 20px;
   padding: 50px;
 }
 
